--- a/package.json
+++ b/package.json
@@ -21,19 +21,20 @@
     "connect-mongo": "~1.3.1",
     "cookie-parser": "~1.4.1",
     "cookie-session": "~1.2.0",
+    "cors": "^2.8.4",
     "cross-env": "~5.0.0",
     "csurf": "1.9.0",
     "dotenv": "~4.0.0",
     "express": "4.15.3",
     "express-session": "~1.15.1",
     "forever": "~0.15.1",
+    "jade": "~1.11.0",
     "method-override": "~2.3.5",
     "mongoose": "~4.11.0",
     "mongoose-user": "~0.0.1",
     "morgan": "~1.8.1",
     "passport": "~0.3.2",
     "passport-local": "~1.0.0",
-    "jade": "~1.11.0",
     "view-helpers": "~0.1.5",
     "winston": "~2.3.0"
   },
